Integrate the API & Update The UI of Create Stream section.
