# backend/src/api/streams.js
@@ -26,4 +26,29 @@ router.get('/list-streams', async(req, res) => {
     });
 });
 
+router.post('/create-stream', async(req, res) => {
+    const { name } = req.body;
+
+    var payload = {
+        "method" : "create",
+        "params" : ["stream", name, false],
+        "id" : 1,
+        "chain_name" : chain_name
+    };
+    
+    const encodedToken = await getDecodeAuth();
+    const result = await axios(`${base_url}`, {
+        method: 'POST',
+        headers: {
+            'Content-Type': 'application/json',
+            'Authorization': 'Basic '+ encodedToken
+        },
+        data: payload,
+    }).then((result) => {
+        return res.status(200).send({ status: "success", message: "Create Stream Successfully 😀", data: result.data.result })
+    }).catch((err) => {
+        return err.response;
+    });
+});
+
 module.exports = router;
